# Git-Changes-Summarizer

./: .gitignore  README.md  client.py  mcp.json  pyproject.toml  server.py
