[project]
name = "pr-automation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.9.0",
    "langchain-groq>=0.3.4",
    "mcp>=1.9.4",
    "mcp-use>=1.3.3",
    "pygit2>=1.18.0",
    "python-dotenv>=1.1.1",
]
